crates/core-metastore/src/snapshots/core_metastore__tests__create_database.snap
---
source: crates/core-metastore/src/tests.rs
expression: "(no_volume_result, all_databases, fetched_db, all_dbs_after)"
---
(
    Err(
        0: Volume testv1 not found, at file:line:col,
    ),
    [
        RwObject {
            data: Database {
                ident: "testdb",
                properties: None,
                volume: "testv1",
            },
            id: UUID,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
    Some(
        RwObject {
            data: Database {
                ident: "testdb",
                properties: None,
                volume: "testv2",
            },
            id: UUID,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ),
    [],
)
