crates/core-metastore/src/snapshots/core_metastore__tests__create_volumes.snap
---
source: crates/core-metastore/src/tests.rs
expression: "(test_volume, all_volumes)"
---
(
    Some(
        RwObject {
            data: Volume {
                ident: "test",
                volume: Memory,
            },
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ),
    [
        RwObject {
            data: Volume {
                ident: "test",
                volume: Memory,
            },
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
)
