crates/core-metastore/src/snapshots/core_metastore__tests__delete_volume.snap
---
source: crates/core-metastore/src/tests.rs
expression: "(all_volumes, get_volume, all_volumes_after)"
---
(
    [
        RwObject {
            data: Volume {
                ident: "test",
                volume: Memory,
            },
            id: UUID,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
    Some(
        RwObject {
            data: Volume {
                ident: "test",
                volume: Memory,
            },
            id: UUID,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ),
    [],
)
