crates/core-metastore/src/snapshots/core_metastore__tests__schemas.snap
---
source: crates/core-metastore/src/tests.rs
expression: "(no_db_result, schema_create, schema_list, schema_get, schema_list_after)"
---
(
    Err(
        0: Database testdb not found, at file:line:col,
    ),
    RwObject {
        data: Schema {
            ident: SchemaIdent {
                schema: "testschema",
                database: "testdb",
            },
            properties: None,
        },
        id: UUID,
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
    [
        RwObject {
            data: Schema {
                ident: SchemaIdent {
                    schema: "testschema",
                    database: "testdb",
                },
                properties: None,
            },
            id: UUID,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
    Some(
        RwObject {
            data: Schema {
                ident: SchemaIdent {
                    schema: "testschema",
                    database: "testdb",
                },
                properties: None,
            },
            id: UUID,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ),
    [],
)
