crates/core-metastore/src/snapshots/core_metastore__tests__update_volume.snap
---
source: crates/core-metastore/src/tests.rs
expression: "(rwo1, rwo2)"
---
(
    RwObject {
        data: Volume {
            ident: "test",
            volume: Memory,
        },
        ids: {
            "id": 1,
        },
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
    RwObject {
        data: Volume {
            ident: "test",
            volume: Memory,
        },
        ids: {
            "id": 1,
        },
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
)
